tests/samples/positive/resources/move_partial_field.ax
module move_partial_field;

struct Box[T] {
    value: T;
    tag: i32;
}

fn unwrap[T](box: Box[T]) -> T {
    return box.value;
}

fn main() -> i32 {
    let wrapped: Box[i32] = Box[i32] { value: 41, tag: 1 };
    return unwrap(wrapped) + 1 - 42;
}
